# ai_prospect

./: .env.example  .gitignore  .mcp.json  DEPLOY.md  LICENSE  README.md
agent/: .env.example  config.py  enrich.py  main.py  pyproject.toml  scheduling.py  supabase_client.py
agent/scraper/: human_behavior.py  maps_scraper.py  parsers.py
agent/tests/: test_human_behavior.py  test_parsers.py  test_scheduling.py
specs/: 00-overview.md  01-architecture.md  02-data-model.md  03-api-contracts.md  04-ai-prompts.md  CONSTITUTION.md
specs/features/: F01-scraper-agente-local.md  F02-supabase-schema-fila.md  F03-ia-scoring-mensagens.md  F04-aprovacao-envio-throttle.md  F05-dashboard-web.md  F06-agente-vendedor-whatsapp.md  F07-mockup-enriquecimento-booking.md
specs/orchestration/: agent-briefs.md  dependency-graph.md  interface-contracts.md
supabase/: config.toml
supabase/functions/_shared/: gemini.ts  prompts.test.ts  prompts.ts  supabase.ts  throttle.test.ts  throttle.ts  types.ts  uazapi.ts
supabase/functions/enqueue-sends/: index.ts
supabase/functions/generate-messages/: index.ts
supabase/functions/process-send-queue/: index.ts
supabase/functions/score-leads/: index.ts
supabase/migrations/: 0001_init.sql  0002_cron.sql  0003_crm.sql  0004_settings_followup.sql  0005_manual_lead.sql
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: LpPromptButton.tsx  ui.tsx
web/src/hooks/: useMetrics.test.ts  useMetrics.ts  (+1 more)
(+10 files in other folders)
