[project]
name = "ai-prospect-agent"
version = "0.1.0"
description = "Agente local: raspa Google Maps por empresas sem site e alimenta o Supabase"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45",
    "playwright-stealth>=1.0.6",
    "supabase>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scraper"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
